jsp ce que j'ai fait

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/@runwayml/hosted-models@latest/dist/hosted-models.js"></script>
-
+    <div>Creators Studios Retrospective</div>
     <style>
         html {
             background-color: rgb(235, 235, 235);
+        }
+        div {
+          font-size:larger;
         }
         .p5Canvas {
             z-index: -1;
